<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:validate="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/voiceassistant_shortname"
        app:initialExpandedChildrenCount="0">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_voiceassistant_commandsallowed"
            android:summary="@string/voiceassistant_commandsallowed_summary"
            android:title="@string/voiceassistant_commandsallowed" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_voiceassistant_requireidentifier"
            android:summary="@string/voiceassistant_requireidentifier_summary"
            android:title="@string/voiceassistant_requireidentifier" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>