<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".plugins.general.voiceAssistant.VoiceAssistantFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/messages_tab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/voiceassistant_messages_short"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wordreplacements_tab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/voiceassistant_wordreplacements_short"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/voiceassistant_log"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text=""/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/wordreplacements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/wordreplacements_reset"
                style="?android:attr/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_local_reset"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/reset" />

            <Button
                android:id="@+id/wordreplacements_save"
                style="?android:attr/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_local_save"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/save" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>